# UeForAIServer-MCP

./: .en  .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt  server.py  test.html
src/: routes.py  server.py  tools.py
src/api/: app.py  routes.py
src/server/: __init__.py  routes.py
src/tools/: __init__.py  common_tools.py  dam_visualization.py  diversion_water.py  finite_element.py  layer_control.py  roaming.py  view_control.py  weather_system.py  working_condition.py
src/ue_mcp/: __init__.py  client.py
src/ue_mcp/tools/: __init__.py  roaming.py  view_control.py
src/utils/: __init__.py  notification.py  session.py
tests/: test.py
web/: embed.min.js  page.html
