[project]
name = "ueforaiserver-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask-socketio>=5.5.1",
    "fuzzywuzzy>=0.18.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.4.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true